# nexuskit-backend

./: .gitignore  1.md  docker-compose.yml  fastapi-skill.md  public.sql  start.ps1  stop.ps1
core-service/: .dockerignore  .env.docker  .env.example  Dockerfile  main.py  pyproject.toml
core-service/common/: base.py
core-service/common/exceptions/: __init__.py
core-service/core/: lifespan.py
core-service/domains/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
core-service/domains/identity/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
core-service/middleware/: gateway_trust.py
core-service/migrations/versions/: .gitkeep  2026-06-18_add_app_perm_mode_and_description.py  2026-06-23_add_auth_user_apps.py  2026-06-25_add_permission_synced_at.py  2026-06-25_add_role_synced_at.py
core-service/scripts/: seed_data.py
core-service/tests/: conftest.py  test_health.py
datahub-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
datahub-service/app/: main.py
datahub-service/app/core/: config.py  db.py  lifespan.py
datahub-service/app/domains/slice/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
datahub-service/app/integrations/storage/: base.py  oss.py
datahub-service/app/middleware/: gateway_auth.py
datahub-service/migrations/: env.py
deploy/: .env.example  docker-compose.yml
deploy/init/: 01-create-databases.sql  public.sql
docs/: NexusKit 第三方系统接入手册.md  nexuskit-sdk.md
gateway/: .env.docker  .env.example  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  server.js
sdk/: pyproject.toml  setup.py
sdk/nexuskit_sdk/: __init__.py  codes.py  exceptions.py  middleware.py  response.py
services/: Dockerfile  alembic.ini  main.py  pyproject.toml
services/common/exceptions/: base.py  business.py
services/common/responses/: __init__.py  (+1 more)
services/core/: config.py  db.py  security.py
services/middleware/: trace.py
services/migrations/: env.py
services/scripts/: seed_data.py
(+12 files in other folders)
